<resources>
    <string name="app_name">Divide And Conquer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subtask_tab">Sub Tasks</string>
    <string name="maintask_tab">Main Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="add_subtask">Add Sub Task</string>
    <string name="add_maintask">Add Main Task</string>
    <string name="about">About</string>
    <string name="completed">completed</string>
    <string name="percent">%1$d%%</string>
    <string name="due_date">Due Date: %1$s %2$s %3$d, %4$d</string>
    <string name="name">Name</string>
    <string name="due_date_add_task">Due Date</string>
    <string name="set_color">Set Color</string>
    <string name="color_set">Color Set</string>
    <string name="enter_title">Enter name…</string>
    <string name="select_maintask">Select Main Task</string>
    <string name="no_title">No name</string>
    <string name="no_due_date_title">No Due Date</string>
    <string name="no_due_date_message">No due date selected. Please select a due date.</string>
    <string name="delete_maintask_title">Delete Main Task</string>
    <string name="delete_maintask_message1">Are you sure you want to delete the main task \"</string>
    <string name="delete_maintask_message2">\"? All of its sub tasks will be deleted as well.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_subtask_snackbar">Sub task \"</string>
    <string name="delete_snackbar">\" deleted</string>
    <string name="undo">Undo</string>
    <string name="delete_maintask_snackbar">Main task \"</string>
    <string name="view_maintask">View Main Task</string>
    <string name="edit_subtask">Edit Sub Task</string>
    <string name="edit_maintask">Edit Main Task</string>
</resources>
