<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_create_task"
        android:title="@string/add_task"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_create_subtask"
                android:title="@string/add_subtask"/>
            <item
                android:id="@+id/action_create_maintask"
                android:title="@string/add_maintask"/>
        </menu>

    </item>

    <item android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

</menu>