<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMainTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_maintask_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:paddingBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/add_maintask_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="8dp"
            >

            <TextView
                android:id="@+id/add_maintask_circle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_color"
                android:paddingLeft="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date_add_task"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:paddingLeft="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/add_maintask_date_picker_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



        <Button
            android:id="@+id/add_maintask_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_maintask"
            android:layout_marginTop="14dp"/>

    </LinearLayout>



</LinearLayout>